# ml.classifiers.vc

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  quantum_models.ipynb  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  vc.html  vc.models.html  vc.optimizers.html  vc.variational_classifier.html
docs/.doctrees/: environment.pickle  index.doctree  vc.doctree  vc.models.doctree  vc.optimizers.doctree  vc.variational_classifier.doctree
docs/_modules/: index.html
docs/_modules/tno/quantum/ml/classifiers/vc/: variational_classifier.html
docs/_modules/vc/: models.html  optimizers.html  variational_classifier.html
docs/_sources/: index.rst.txt  vc.models.rst.txt  vc.optimizers.rst.txt  vc.rst.txt  vc.variational_classifier.rst.txt
src/tno/quantum/ml/classifiers/vc/: __init__.py  _variational_classifier.py
src/tno/quantum/ml/classifiers/vc/models/: __init__.py  _base.py  expected_value_model.py  probability_model.py
src/tno/quantum/ml/classifiers/vc/test/: __init__.py  test_parity_model.py  test_variational_classifier.py
tno/quantum/ml/classifiers/vc/: __init__.py  models.py  optimizers.py  utils.py  variational_classifier.py
tno/quantum/ml/classifiers/vc/test/: test_variational_classifier.py
