[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.quantum.ml.classifiers.vc"
description = "Quantum VC module"
readme = "README.md"
authors = [{ name = "TNO Quantum Code Lab", email = "tnoquantum@tno.nl" }]
maintainers = [{ name = "TNO Quantum Code Lab", email = "tnoquantum@tno.nl" }]
keywords = ["TNO", "Quantum"]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "tno.quantum.utils~=5.1",
    "scikit-learn~=1.6",
    "numpy",
    "pennylane",
    "torch",
    "torchtyping",
    "tqdm",
    "networkx<=3.2.1; python_version == '3.9'",
]

[project.urls]
Homepage = "https://github.com/TNO-Quantum/"
Documentation = "https://tno-quantum.github.io/documentation/"
Source = "https://github.com/TNO-Quantum/ml.classifiers.vc"

[project.optional-dependencies]
tests = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "tomlkit",
    "pandas",
    "tno.quantum.ml.datasets",
    "pennylane-qiskit>=0.41; python_version < '3.13'",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "tno.quantum.ml.classifiers.vc.__version__" }

[tool.setuptools.package-data]
"*" = ["py.typed"]
