[metadata]
name = tno.quantum.ml.classifiers.vc
author = TNO Quantum
author_email = tnoquantum@tno.nl
maintainer = TNO Quantum
maintainer_email = tnoquantum@tno.nl
description = Quantum VC module
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7,<3.11
keywords =
    TNO
    Quantum
url = https://tno.nl
download_url = https://pypi.org/project/tno.quantum.ml.classifiers.vc/#files
project_urls =
    Documentation = https://tno-quantum.github.io/ml.classifiers.vc/
    Source Code = https://github.com/TNO-Quantum/ml.classifiers.vc
version = attr: tno.quantum.ml.classifiers.vc.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.quantum.ml.classifiers.vc
    tno.quantum.ml.classifiers.vc.test
zip_safe = False
install_requires =
    scikit-learn~=1.0.2
    numpy>=1.21.6
    PennyLane~=0.24.0
    pennylane_qiskit~=0.24.0
    torch~=1.11.0
    torchtyping~=0.1.4
    tqdm~=4.64.1
namespace_packages =
    tno
    tno.quantum
    tno.quantum.ml
    tno.quantum.ml.classifiers
include_package_data = True

[options.package_data]
tno.quantum.ml.classifiers.vc = py.typed

[options.extras_require]
tests =
    pytest~=7.2.0
    pytest-cov~=4.0.0
    pandas>=1.3.5
    tno.quantum.ml.datasets~=1.2.1
dev =
    black~=22.10.0
    isort~=5.10.1
    mypy~=0.982
    pylint~=2.15.5
    sphinx~=5.3.0
    sphinx-autodoc-typehints~=1.19.5
    sphinx-math-dollar~=1.2.1
    sphinx-rtd-theme~=1.0
    jupyter~=1.0.0
